build_verification.txt
warning: excluded package(s) `vm-stress-test-runner` not found in workspace `/Users/wangbiao/Desktop/project/vm`
   Compiling vm-engine-jit v0.1.0 (/Users/wangbiao/Desktop/project/vm/vm-engine-jit)
   Compiling vm-engine-interpreter v0.1.0 (/Users/wangbiao/Desktop/project/vm/vm-engine-interpreter)
   Compiling vm-frontend v0.1.0 (/Users/wangbiao/Desktop/project/vm/vm-frontend)
   Compiling vm-interface v0.1.0 (/Users/wangbiao/Desktop/project/vm/vm-interface)
   Compiling tauri-macros v2.5.2
   Compiling vm-desktop v0.1.0 (/Users/wangbiao/Desktop/project/vm/vm-desktop)
   Compiling vm-cross-arch-support v0.1.0 (/Users/wangbiao/Desktop/project/vm/vm-cross-arch-support)
   Compiling vm-resource v0.1.0 (/Users/wangbiao/Desktop/project/vm/vm-resource)
error[E0432]: unresolved import `vm_error`
 --> vm-resource/src/lib.rs:6:5
  |
6 | use vm_error::{VmError, VmResult};
  |     ^^^^^^^^ use of unresolved module or unlinked crate `vm_error`
  |
  = help: if you wanted to use a crate named `vm_error`, use `cargo add vm_error` to add it to your `Cargo.toml`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `vm_error`
   --> vm-resource/src/lib.rs:572:25
    |
572 |                 source: vm_error::ConfigError::InvalidValue(
    |                         ^^^^^^^^ use of unresolved module or unlinked crate `vm_error`
    |
    = help: if you wanted to use a crate named `vm_error`, use `cargo add vm_error` to add it to your `Cargo.toml`
help: consider importing this enum
    |
555 +     use vm_foundation::ConfigError;
    |
help: if you import `ConfigError`, refer to it directly
    |
572 -                 source: vm_error::ConfigError::InvalidValue(
572 +                 source: ConfigError::InvalidValue(
    |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `vm_error`
   --> vm-resource/src/lib.rs:583:29
    |
583 |                     source: vm_error::ConfigError::InvalidValue(
    |                             ^^^^^^^^ use of unresolved module or unlinked crate `vm_error`
    |
    = help: if you wanted to use a crate named `vm_error`, use `cargo add vm_error` to add it to your `Cargo.toml`
help: consider importing this enum
    |
555 +     use vm_foundation::ConfigError;
    |
help: if you import `ConfigError`, refer to it directly
    |
583 -                     source: vm_error::ConfigError::InvalidValue(
583 +                     source: ConfigError::InvalidValue(
    |

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
error: could not compile `vm-resource` (lib) due to 3 previous errors
warning: build failed, waiting for other jobs to finish...
error[E0004]: non-exhaustive patterns: `&vm_foundation::VmError::GenericMsg(_)` not covered
  --> vm-engine-jit/src/common/error.rs:61:36
   |
61 |             let error_type = match error {
   |                                    ^^^^^ pattern `&vm_foundation::VmError::GenericMsg(_)` not covered
   |
note: `vm_foundation::VmError` defined here
  --> vm-foundation/src/error.rs:44:1
   |
44 | pub enum VmError {
   | ^^^^^^^^^^^^^^^^
...
88 |     GenericMsg(String),
   |     ---------- not covered
   = note: the matched value is of type `&vm_foundation::VmError`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
70 ~                 VmError::Generic { .. } => "Generic",
71 ~                 &vm_foundation::VmError::GenericMsg(_) => todo!(),
   |

For more information about this error, try `rustc --explain E0004`.
error: could not compile `vm-engine-jit` (lib) due to 1 previous error
